Collider test with the code