@@ -12,7 +12,7 @@ public class Collider {
     public static final AtomicLong TOTAL_TESTS = new AtomicLong(0);
 
     private static void SHA1ThreadedCollisionTest(int threads) {
-        try (ExecutorService executor = Executors.newFixedThreadPool(threads)) {
+        try (ExecutorService executor = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors())) {
             SHA1Unit preimage = new SHA1Unit();
             for (int i = 0; i < threads; i++) {
                 executor.submit(new CollisionTask(preimage));
@@ -23,8 +23,25 @@ public class Collider {
 
     private static void SHA1DynamicThreadedCollisionTest(double targetCpuLoad, double adjustmentThreshold) {
         SHA1Unit preimage = new SHA1Unit();
-        int maxThreads = Runtime.getRuntime().availableProcessors() * 1024;
-        AtomicReference<ExecutorService> executorRef = new AtomicReference<>(Executors.newFixedThreadPool(maxThreads));
+        AtomicReference<ExecutorService> executorRef = new AtomicReference<>(Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors()));
+        Thread adjusterThread = new Thread(new DynamicThreadAdjuster(executorRef, targetCpuLoad / 100, adjustmentThreshold / 100, preimage));
+        adjusterThread.start();
+        // Use executorRef.get() to get the current ExecutorService
+    }
+
+    private static void SHA1ThreadedVirtualCollisionTest(int threads) {
+        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            SHA1Unit preimage = new SHA1Unit();
+            for (int i = 0; i < threads; i++) {
+                executor.submit(new CollisionTask(preimage));
+            }
+            executor.shutdown();
+        }
+    }
+
+    private static void SHA1DynamicThreadedVirtualCollisionTest(double targetCpuLoad, double adjustmentThreshold) {
+        SHA1Unit preimage = new SHA1Unit();
+        AtomicReference<ExecutorService> executorRef = new AtomicReference<>(Executors.newVirtualThreadPerTaskExecutor());
         Thread adjusterThread = new Thread(new DynamicThreadAdjuster(executorRef, targetCpuLoad / 100, adjustmentThreshold / 100, preimage));
         adjusterThread.start();
         // Use executorRef.get() to get the current ExecutorService
@@ -32,7 +49,9 @@ public class Collider {
 
     public static void main(String[] args) {
         //SHA1ThreadedCollisionTest(Runtime.getRuntime().availableProcessors() * 2);
-        SHA1DynamicThreadedCollisionTest(95, 10);
+        //SHA1DynamicThreadedCollisionTest(95, 10);
+        //SHA1ThreadedVirtualCollisionTest(Runtime.getRuntime().availableProcessors() * 2);
+        SHA1DynamicThreadedVirtualCollisionTest(95, 10);
     }
 
 }
